    be be added to each $SWIGPATH directory when expanded on the SWIG
    command line.

  - More efficient copying of construction environments (mostly borrowed
    from copy.deepcopy() in the standard Python library).

  - When printing --tree=prune output, don't print [brackets] around
    source files, only do so for built targets with children.

  From Leanid Nazdrynau:

  - When applying Tool modules after a construction environment has
    already been created, don't overwrite existing $CFILESUFFIX and
    $CXXFILESUFFIX value.

  - Support passing the Java() builder a list of explicit .java files
    (not only a list of directories to be scanned for .java files).

  - Add $JAVACLASSPATH and $JAVASOURCEPATH variables, that get added to
    the javac "-classpath" and "-sourcepath" options.  (Note that SCons
    does *not* currently search these paths for implicit dependencies.)

  From Jan Nijtmans:

  - Find Java anonymous classes when the next token after the name is
    an open parenthesis.

  From Tilo Prutz:

  - Add support for the file names that Java 1.5 (and 1.6) generates for
    nested anonymous inner classes, which are different from Java 1.4.

  From Adam Simpkins:

  - Allow worker threads to terminate gracefully when all jobs are
    finished.

  From Sohail Somani:

  - Add LaTeX scanner support for finding dependencies specified with
    the \usepackage{} directive.



RELEASE 0.97 - Thu, 17 May 2007 08:59:41 -0500

  From Steven Knight:

  - Fix a bug that would make parallel builds stop in their tracks if
    Nodes that depended on lists that contained some Nodes built together
    caused the reference count to drop below 0 if the Nodes were visited
    and commands finished in the wrong order.

  - Make sure the DirEntryScanner doesn't choke if it's handed something
    that's not a directory (Node.FS.Dir) Node.



RELEASE 0.96.96 - Thu, 12 Apr 2007 12:36:25 -0500

  NOTE:  This is (Yet) a(nother) pre-release of 0.97 for testing purposes.
